--- a/package.json
+++ b/package.json
@@ -14,9 +14,30 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@ccalamos/gatsby-source-googlemaps-static": "^3.0.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
+    "dotenv": "^8.2.0",
     "gatsby": "^3.0.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "gatsby-cli": "^3.1.0",
+    "gatsby-image": "^3.1.0",
+    "gatsby-plugin-postcss": "^4.1.0",
+    "gatsby-plugin-sharp": "^3.1.1",
+    "gatsby-plugin-web-font-loader": "^1.0.4",
+    "gatsby-source-filesystem": "^3.1.0",
+    "gatsby-transformer-sharp": "^3.1.0",
+    "google-map-react": "^2.1.9",
+    "postcss": "^8.2.6",
+    "prop-types": "^15.7.2",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-draggable": "^4.4.3",
+    "react-helmet": "^6.1.0",
+    "styled-components": "^5.2.1",
+    "tailwindcss": "^2.0.4",
+    "twin.macro": "^2.3.0"
   },
   "devDependencies": {
     "prettier": "2.2.1"
