--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
   },
   "dependencies": {
     "@ccalamos/gatsby-source-googlemaps-static": "^3.0.1",
+    "@fontsource/itim": "^4.2.3",
+    "@fontsource/open-sans-condensed": "^4.2.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "dotenv": "^8.2.0",
     "gatsby": "^3.0.1",
+    "gatsby-background-image": "^1.5.0",
     "gatsby-cli": "^3.1.0",
     "gatsby-image": "^3.1.0",
     "gatsby-plugin-postcss": "^4.1.0",
