--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-dom": "^16.14.0",
     "react-draggable": "^4.4.3",
     "react-helmet": "^6.1.0",
+    "react-modal": "^3.14.3",
     "react-pdf": "^5.3.0",
     "styled-components": "^5.2.1",
     "tailwindcss": "^2.0.4",
